
3.19  2012-08-03
  - Improved documentation.
  - Improved tests.

3.18  2012-08-02
  - Improved documentation.
  - Improved tests.
  - Fixed chunked transfer encoding bug in Mojo::Content.

3.17  2012-08-01
  - Improved documentation.
  - Improved tests.
  - Fixed bug in after_static_dispatch hook that prevented custom responses.
  - Fixed bug that prevented conditions from generating responses.

3.16  2012-07-31
  - Improved documentation.
  - Fixed small memory leak in Mojolicious::Plugin::TagHelpers.

3.15  2012-07-28
  - Improved Mojo::Base to load IO::Handle.
  - Improved documentation.

3.14  2012-07-27
  - Improved documentation.

3.13  2012-07-24
  - Added multi name support to param method in Mojolicious::Controller.
  - Added remove method to Mojo::DOM.
  - Improved RFC 3986 compliance of Mojo::Parameters.
  - Improved Mojolicious::Plugin::Config log messages. (jberger)
  - Improved documentation.
  - Improved tests.
  - Fixed selector bug in dom method of Mojo::Message.
  - Fixed small charset bug in get command.

3.12  2012-07-20
  - Deprecated Mojo::Home->app_class.
  - Deprecated Mojo::IOLoop->client_class.
  - Deprecated Mojo::IOLoop->server_class.
  - Deprecated Mojo::IOLoop->stream_class.
  - Deprecated Mojo::Message->dom_class.
  - Deprecated Mojo::Message->json_class.
  - Added json method to Mojo::UserAgent::Transactor.
  - Added build_json_tx and post_json methods to Mojo::UserAgent.
  - Added post_json_ok method to Test::Mojo.
  - Added n function to ojo.
  - Improved text_field helper to always set the type attribute. (marty, sri)
  - Improved documentation.
  - Improved tests.
  - Fixed file and content type detection bugs in Mojolicious::Static.
    (marty, sri)

3.11  2012-07-19
  - Added or method to Test::Mojo. (moritz, sri)
  - Added file and serve_asset methods to Mojolicious::Static.
  - Improved default descriptions for many methods in Test::Mojo.
  - Improved Mojo::Cache performance. (nic)
  - Improved documentation.