@@ -2,6 +2,8 @@
 3.19  2012-08-03
   - Improved documentation.
   - Improved tests.
+  - Fixed bug that prevented multiple anchors with the same name in
+    Mojolicious::Plugin::PODRenderer.
 
 3.18  2012-08-02
   - Improved documentation.
